# elliptic_surfaces

./: .gitignore  CMakeLists.txt  README.md  field_concept.h  galois_field.cpp  galois_field_tests.hpp  main.cpp  math_exception.cpp  math_exception.h  multivariable_monomial.h  multivariable_polynomial.h  polynom.cpp  polynom.h  prime_field.cpp  prime_field.h  surface.cpp  surface.h
prime_polynomials/: 11.plnm  13.plnm  17.plnm  19.plnm  23.plnm  5.plnm  7.plnm
src/: galois_field.cpp  galois_field.h  main.cpp  multivariable_monomial.cpp  multivariable_polynomial.cpp  multivariable_tests.hpp  polynom.cpp  polynomial_tests.hpp  prime_field_tests.hpp  surface.cpp  tests.cpp
